<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAgregar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgAgregarPortada"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,16:6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAgregarTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_8"
            android:layout_marginTop="@dimen/margin_main_8"
            android:layout_marginEnd="@dimen/margin_main_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAgregarPortada">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAgregarTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_titulo_agregar"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAgregarAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_8"
            android:layout_marginTop="@dimen/margin_main_8"
            android:layout_marginEnd="@dimen/margin_main_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAgregarTitulo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAgregarAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_autor_agregar"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAgregarAnio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_8"
            android:layout_marginTop="@dimen/margin_main_8"
            android:layout_marginEnd="@dimen/margin_main_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAgregarAutor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAgregarAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_anio_agregar"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAgregarUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_8"
            android:layout_marginTop="@dimen/margin_main_8"
            android:layout_marginEnd="@dimen/margin_main_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAgregarAnio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAgregarUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_url_agregar"
                android:inputType="textWebEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAgregarSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_main_8"
            android:layout_marginTop="@dimen/margin_main_8"
            android:layout_marginEnd="@dimen/margin_main_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAgregarUrl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAgregarSinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_sinopsis_agregar"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_main_8"
            android:layout_marginBottom="@dimen/margin_main_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_save_white_24dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>